<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Nouzha</string>
    <string name="slogan">Nouzha,Slow down and enjoy life. It\'s not only the scenery you miss by going to fast - you also miss the sense of where you are going and why.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_staff">HomeStaff</string>
    <string name="login">Login</string>
    <string name="phoneNumber">Phone number</string>
    <string name="birthday">Birthday</string>
    <string name="birthplace">Birthplace</string>
    <string name="avatar">Avatar</string>
    <string name="profession">Profession</string>
    <string name="get_ticket">Get ticket</string>
    <string name="designation">Designation</string>
    <string name="number_of_places">Number of places</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="discout">Discout</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="zip_code">Zip code</string>
    <string name="select">Select</string>
    <string name="upload">Upload</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="name_of_category">Name of category</string>
    <string name="check_connection">Please check your internet connection</string>
    <string name="added_to_my_tickets">Added to my tickets</string>
    <string name="add_new_activity">Add new activity</string>
    <string name="please_fill_full_information">Please fill full information</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick time</string>
    <string name="new_activity">New activity</string>
    <string name="was_added">was added</string>
    <string name="cancel">Cancel</string>
    <string name="uploading">Uploading ...</string>
    <string name="uploaded">Uploaded !</string>
    <string name="select_image">Select image</string>
    <string name="image_selected">Image selected</string>
    <string name="update_activity">Update activity</string>
    <string name="confirm">Confirm</string>
    <string name="activity">Activity</string>
    <string name="was_updated">was updated</string>
    <string name="categories">Categories</string>
    <string name="enter_your_category">Enter your category</string>
    <string name="added_to_favourites">Added to favourites</string>
    <string name="removed_from_favourites">Removed from favourites</string>
    <string name="categories_management">Categories management</string>
    <string name="add_new_category">Add new category</string>
    <string name="new_category">New category</string>
    <string name="category_deleted">Category deleted</string>
    <string name="update_category">Update category</string>
    <string name="wrong_password">Wrong user\'s password !</string>
    <string name="user_not_exist">Credentials does not match !</string>
    <string name="days_left">Days left:</string>
    <string name="please_wait">Please wait ...</string>
    <string name="phone_already_exist">Phone number already exist !</string>
    <string name="register_successfully">Registred successfully !</string>
    <string name="one_more_step">One more step</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="order_placed">Order placed</string>

    <string name="facebook_app_id">952402024927898</string>
    <string name="facebook_login_protocole_name">fb952402024927898</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
</resources>