<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <LinearLayout

        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="wrap_content"
            android:padding="@dimen/padding_register_edit_text"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            android:hint="@string/first_name"/>

        <EditText
            android:padding="@dimen/padding_register_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            android:hint="@string/last_name"/>

        <EditText
            android:padding="@dimen/padding_register_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:hint="@string/email"/>

        <EditText
            android:padding="@dimen/padding_register_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:hint="@string/password" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerBtn"
            android:text="@string/register"/>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"/>


    </LinearLayout>

</FrameLayout>